simplificacion de la periodicidd de notificaciones